--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
     "name": "problem-b",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://daisyxie.github.io/ps-7/",
     "dependencies": {
+        "bootstrap": "^4.1.3",
         "d3": "^5.7.0",
+        "gh-pages": "^2.0.1",
         "lodash": "^4.17.4",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
-        "react-scripts": "1.0.17"
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "1.0.17",
+        "reactstrap": "^6.5.0"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
     }
